# Deals

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
deal/: admin.py  models.py  urls.py  views.py
deal/api/: serializers.py
deal/migrations/: 0001_initial.py  0002_alter_account_claimed_deal_alter_account_phone.py  0002_alter_account_phone.py  0002_alter_deal_datetime_utc.py  0002_rename_user_user_profile.py  0003_alter_account_phone.py  0003_deals.py  0003_remove_user_profile_user_account_datetime_utc_and_more.py  0004_alter_account_datetime_utc.py  0004_alter_account_phone.py  0004_rename_deals_deal.py  0005_alter_deal_amount.py  0005_delete_user_profile_account_claimed_deal.py  0006_alter_user_profile_gender_alter_user_profile_status.py  0007_remove_user_profile_user.py  0008_user_profile_user_alter_deal_status.py  0009_alter_deal_amount.py  0010_alter_deal_description.py  0011_user_profile_last_login_user_profile_user_image_and_more.py
project/: settings.py  urls.py
